Fix HTML structure and formatting

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="txt-iletisim-adres">Ilgaz, Çankırı</div>
         <div id="txt-iletisim-mail">info@ilgazihtisas.com</div>
         
-        <div id="txt-iletisim-github">https://raw.githubusercontent.com/Yasarkuloglu/index/refs/heads/main/ilgaz?token=GHSAT0AAAAAADWAISHS6MERV2HPCUZGSOZ62MZS2PA</div>
+        <div id="txt-iletisim-github">https://raw.githubusercontent.com/Yasarkuloglu/rehber-index.html/refs/heads/main/index.html</div>
         
         <div id="txt-iletisim-icerik">Öneri ve görüşleriniz için aşağıdaki kanalları kullanabilirsiniz:</div>
 
@@ -135,4 +135,5 @@
         window.onload = function() { ekranaBas('giris'); };
     </script>
 </body>
+
 </html>
