Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div id="txt-tarih-baslik">📜 Tarihçe</div><div id="txt-tarih-ust">Şanlı Geçmiş</div><div id="txt-tarih-icerik">İstiklal Yolu...</div>
         <div id="txt-cografya-baslik">📍 Coğrafya</div><div id="txt-cografya-ust">2587 Metre</div><div id="txt-cografya-icerik">Konum bilgileri...</div>
         <div id="txt-gezi-baslik">🌲 Gezip Görelim</div><div id="txt-gezi-ust">Doğa Durakları</div><div id="txt-gezi-icerik">Ilgaz Milli Parkı.</div>
-        <div id="txt-siir-baslik">✍️ Şiirler</div><div id="txt-siir-ust">Ozanlar</div><div id="txt-siir-icerik">Ilgaz şiirleri...</div>
+        <div id="txt-siir-baslik">✍️ Şiirler</div><div id="txt-siir-ust">Ilgaz Şiirleri</div><div id="txt-siir-icerik">Ilgaz şiirleri...</div>
         <div id="txt-yemek-baslik">🍴 Mutfak</div><div id="txt-yemek-ust">Lezzetler</div><div id="txt-yemek-icerik">Yöresel yemekler...</div>
         <div id="txt-deger-baslik">🌟 Değerler</div><div id="txt-deger-ust">Kişiler</div><div id="txt-deger-foto">.</div><div id="txt-deger-isim">.</div><div id="txt-deger-icerik">.</div>
     </div>
@@ -137,3 +137,4 @@
 </body>
 
 </html>
+
