Fix formatting issues in index.html

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
         
         <div id="txt-iletisim-icerik">Öneri ve görüşleriniz için aşağıdaki kanalları kullanabilirsiniz:</div>
 
-        <div id="txt-giris-baslik">🏠 Ilgaz Rehberi</div><div id="txt-giris-ust">Hoş Geldiniz</div><div id="txt-giris-icerik">Menüden keşfe başlayın.</div>
+        <div id="txt-giris-baslik">🏠 Ilgaz Rehberi</div><div id="txt-giris-ust">Hoş Geldiniz</div><div id="txt-giris-icerik">1-Tarihce<br>2- Coğrafi Konum<br>3- Gezip Görelim<br> 4-Şiirler<br>5-Mutfak<br>6- Ilgaz Değerleri</div>
         <div id="txt-tarih-baslik">📜 Tarihçe</div><div id="txt-tarih-ust">Şanlı Geçmiş</div><div id="txt-tarih-icerik">İstiklal Yolu...</div>
         <div id="txt-cografya-baslik">📍 Coğrafya</div><div id="txt-cografya-ust">2587 Metre</div><div id="txt-cografya-icerik">Konum bilgileri...</div>
-        <div id="txt-gezi-baslik">🌲 Gezip Görelim</div><div id="txt-gezi-ust">Doğa Durakları</div><div id="txt-gezi-icerik">Ilgaz Milli Parkı.</div>
+        <div id="txt-gezi-baslik">🌲 Gezip Görelim</div><div id="txt-gezi-ust">Gezilecek Yerler</div><div id="txt-gezi-icerik">Ilgaz Milli Parkı.</div>
         <div id="txt-siir-baslik">✍️ Şiirler</div><div id="txt-siir-ust">Ilgaz Şiirleri</div><div id="txt-siir-icerik">Ilgaz şiirleri...</div>
         <div id="txt-yemek-baslik">🍴 Mutfak</div><div id="txt-yemek-ust">Lezzetler</div><div id="txt-yemek-icerik">Yöresel yemekler...</div>
         <div id="txt-deger-baslik">🌟 Değerler</div><div id="txt-deger-ust">Kişiler</div><div id="txt-deger-foto">.</div><div id="txt-deger-isim">.</div><div id="txt-deger-icerik">.</div>
@@ -137,4 +137,5 @@
 </body>
 
 </html>
+
 
