Update greeting from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -50,15 +50,97 @@
         <div id="txt-iletisim-adres">Ilgaz, Çankırı</div>
         <div id="txt-iletisim-mail">info@ilgazihtisas.com</div>
         
-        <div id="txt-iletisim-github">https://raw.githubusercontent.com/Yasarkuloglu/rehber-index.html/refs/heads/main/index.html</div>
+        <div id="txt-iletisim-github">https://raw.githubusercontent.com/Yasarkuloglu/rehber-index.html/refs/heads/main/index.html
+</div>
         
         <div id="txt-iletisim-icerik">Öneri ve görüşleriniz için aşağıdaki kanalları kullanabilirsiniz:</div>
 
-        <div id="txt-giris-baslik">🏠 Ilgaz Rehberi</div><div id="txt-giris-ust">Hoş Geldiniz</div><div id="txt-giris-icerik">1-Tarihce<br>2- Coğrafi Konum<br>3- Gezip Görelim<br> 4-Şiirler<br>5-Mutfak<br>6- Ilgaz Değerleri</div>
-        <div id="txt-tarih-baslik">📜 Tarihçe</div><div id="txt-tarih-ust">Şanlı Geçmiş</div><div id="txt-tarih-icerik">İstiklal Yolu...</div>
-        <div id="txt-cografya-baslik">📍 Coğrafya</div><div id="txt-cografya-ust">2587 Metre</div><div id="txt-cografya-icerik">Konum bilgileri...</div>
-        <div id="txt-gezi-baslik">🌲 Gezip Görelim</div><div id="txt-gezi-ust">Gezilecek Yerler</div><div id="txt-gezi-icerik">Ilgaz Milli Parkı.</div>
-        <div id="txt-siir-baslik">✍️ Şiirler</div><div id="txt-siir-ust">Ilgaz Şiirleri</div><div id="txt-siir-icerik">Ilgaz şiirleri...</div>
+        <div id="txt-giris-baslik">🏠 Ilgaz Rehberi</div><div id="txt-giris-ust">Hoş Geldiniz</div><div id="txt-giris-icerik">1-Tarihçe<br>2-Coğtafi Konum<br>3-Gezip Görelim<br>4-Şiirler<br>5-Mutfak<br> 6-Ilgaz Değerleri</div>
+        <div id="txt-tarih-baslik">📜 Tarihçe</div><div id="txt-tarih-ust">Şanlı Geçmiş</div><div id="txt-tarih-icerik">Ilgaz'ın Tarihçesi
+		Ilgaz, geçmişte doğu ve batı medeniyetlerinin kaynaştığı ve farklı kültürlerin bir araya geldiği önemli bir coğrafyadır. İlçemizin kuruluşuna ilişkin MÖ 2000 yılına ait olduğu tahmin edilen Arkhaik, Helenistik ve Roma çağına dayanan yüzeysel buluntular elde edilmiş olmasına rağmen kesin yerleşim tarihi bu buluntulara bakılarak belirlenememiştir.
+
+		En eski yerleşimin Cendere Köyü ile Devrez Çayı'nın İnköy ile birleştiği yer arasında bulunduğu ve Roma-Bizans dönemine kadar indiği tahmin edilmekte ve buluntulara dayanılarak ileri sürülmektedir.
+
+		Ilgaz'ın tarihini Proto-Hititler ve Hititler'den itibaren ele almak gerekir. Hititler, MÖ 1600'lü yıllarda Kafkaslardan Anadolu'ya yerleşerek Hattuşaş'ta bir imparatorluk kuran ve kökenleri Hint-Avrupa ailesine dayanan bir topluluktur. Hitit İmparatorluğu, MÖ 1300'lerin ortalarında en geniş sınırlarına ulaşarak, Yukarı Mezopotamya'dan Doğu Akdeniz ülkelerine kadar yayılmıştır. Ilgaz'ın ilk yerlileri de yörede şehir devletleri kuran ve Hattiler olarak da bilinen Proto-Hititler'dir. Zamanla Proto-Hititler'i kendi bünyelerinde eriten Hititler; Anadolu’da üstün bir medeniyet ve egemenlik kurmuşlarsa da MÖ 1200'lü yıllarda Dor istilasına uğramışlardır.
+
+		MÖ 1200'lü yıllardan MÖ 700'lü yıllara kadar devam eden 500 yıllık sürede Ilgaz ile ilgili kesin bilgiler elde edilememiştir. Bu dönemde Kafkas bölgesinden gelen Kimmerler Ilgaz yöresini istila etmişlerse de MÖ 584'de batıdan gelen Lidyalılar tarafından Kimmer üstünlüğüne son verilmiştir. Lidyalılar, egemenlikleri döneminde sürekli olarak doğuda Medlerle savaşmışlar ve Kızılırmak Nehri her iki kavim arasında sınır olarak kalmıştır.
+
+		MÖ 546'da Ilgaz ve çevresinin tamamı Pers egemenliğine girmiştir. Büyük İskender’in MÖ 330'lu yıllarda bölgeyi ele geçirmesiyle beraber Ilgaz ilçesinin tarihi de açıklık kazanmaya başlamıştır. MÖ 302 ve takip eden yıllarda Ilgaz ilçe sınırları içinde bulunan Kimiate şehri; başkent olarak önemli bir kent unvanını kazanmıştır. Y. Kiper ve Leonhard, Kimiate’nin yerini İnköy'de bulunan tepe olarak kabul ederken, buranın Cendere ile Kurmalar köyleri arasında olduğunu ileri süren arkeologlar da vardır. 
+
+		Hitit, Frig ve Roma dönemlerine ait buluntular ise Salman Höyük ile Cendere Köyü höyüklerinden elde edilmiştir. Bu alanda 1979 yılında Türk Tarih Kurumu tarafından yaptırılan araştırmada yazıtlar, keramik ve porselen buluntuları elde edilmiştir. Ayrıca Kurmalar Köyü Demirciler yaylasında antik kentlerin çarşılarını oluşturan, halkını kötü hava şartlarından koruyan ve her türlü sosyal etkinlikleri gerçekleştiren Stoa tarzı binalara ait yazıtlar elde edilmiştir. Bu eserler yerleşimin 900 ile 1000 yıllık bir geçmişi olduğunu kanıtlamaktadır.
+
+		MÖ 189-185'te Pontus Kralı Pharnakes bölgede üstünlük sağlar. MÖ 180 yılında Çankırı prensi Morzeos Ilgaz’ı ele geçirir. MÖ 88-64 yıllarında 24 yıl süreli Mithridates savaşları yapılırsa da MÖ 120-64 yılları arasında Mithridates soyu bölgedeki nüfuzlu üstünlüklerini devam ettirir. Strabon’a göre Kimiate, Mithridates Avpator döneminde oldukça önemli bir kent olma özelliğini sürdürmüştür.
+
+		MÖ 67-63 yılları arasında zayıflayan Mithridates soyunun toprakları Romalıların eline geçer. Romalı Konsül Pompeius, Roma Senatosu'ndan kendi adını taşıyan bir yasa çıkarır ve bu yasa ile Bithnia-Pontus eyaletlerini kurar. Pontus ve Paphlagonia’yı kendi iç işlerinde serbest bırakır. Çankırı (Gangra) krallık ve prenslik olarak eski Çankırı Prensi Plaimenes tarafından MÖ 64'te Altalos’a verilir. Ilgaz o zamandan günümüze kadar sürekli Çankırı’ya bağlanır. Ilgaz yöresinde oturan halkın o dönemlerde Roma, Bodrum ve Amasya yöresinden geldiği bazı bilimsel eserlerde kaydedilmektedir. MÖ 3. yüzyıla ait Gökçay, Devrez vadileri ve Cendere köylerinde bazı buluntular elde edilmiştir.
+
+		Roma ve Bizans dönemine ait çeşitli eserlerin elde edildiği Ilgaz ilçesi ve yöresi 1071 yılından sonra Anadolu’ya akınlar halinde gelen Türk boylarının yönetimine girmiş, Türk boyları bölgede parça parça yerleşmeye başlamışlardır. 1132 yılında Danişment Gazi'nin kurduğu beyliğin sınırları içine alınan Ilgaz daha sonraları Trabzon’u başkent yapan Pontus Rum İmparatorluğu'nun kısa bir süre egemenliği altında yaşamıştır.
+
+		1213 yılında Selçuklu hükümdarı İzzettin Keykavus Ilgaz’ı imparatorluğun sınırları içine katar ve Candaroğulları beyliği yörede üstünlük sağlar. Çoban Hüsamettin döneminden sonra bir müddet bağımsız halde kalan Ilgaz bölgesi Yıldırım Bayezid döneminde Osmanlı İmparatorluğu sınırları içine katılır.
+
+		Osmanlı yerel yönetiminde Çankırı’ya bağlı bir kadılık ve 1284 H. teşkilatı ile Mecidiye adını alarak ilçe olmuş, 1922 yılında Ilgaz adını almış ve 1929 yılında Çankırı’ya bağlanmıştır. 1929'dan bugüne Ilgaz, Çankırı İline bağlı bir ilçedir.
+
+		Ilgaz'ın Adı Nereden Geliyor?
+		Bugünkü adını Ilgaz Dağları'ndan alan ilçe; Antik Çağ'da Climata, daha sonraları Kimistene olarak bilinen bir yerleşim merkezi içinde iken, Anadolu’nun Türkleşmesi ile Osmanlı İmparatorluğu döneminde Koçhisar-ı Bala olarak adlandırılmıştır. Ilgaz’a ait Osmanlı kayıtları 1850'li yıllara rastlar. İlçe adı salnamelerde (1854) Koçhisar veya Koçhisar-ı Bala olarak kaydedilir.
+
+		Geçmişten Günümüze Ilgaz İlçe Merkezi Nereler Olmuştur?
+		Ilgaz ilçesi köklü bir geçmişe dayanmaktadır. Candaroğulları Beyliği döneminde Ödemiç (bugünkü Ödemiş Köyü) yerleşim merkezidir. Bu merkez daha sonra Bucura (Yaylaören) köyüne nakledilir. Köyün büyük bir yangın geçirmesi sonucunda Bilviran (Belören) yeni merkez olur. Osmanlı yerel yönetiminde Çankırı’ya bağlı bir kadılık ve 1284 H. teşkilatı ile Mecidiye adını alarak ilçe ilan edilen ve o zamanlarda Koçhisar olarak anılan ilçemiz; 1922 yılında Ilgaz adını almış ve 1929 yılında Çankırı iline bağlanmıştır.
+
+		Ilgaz Nereye Bağlı? Ilgaz İlçesi Hangi İle Bağlıdır?
+		19. yy.ın ikinci yarısında Çankırı’ya bağlı olan Ilgaz, bir süreliğine Kastamonu’ya bağlanmıştır. Osmanlı yerel yönetiminde Çankırı’ya bağlı bir kadılık ve 1284 H. teşkilatı ile Mecidiye adını alarak ilçe olmuş, 1922 yılında Ilgaz adını almış ve 1929 yılında Çankırı’ya bağlanmıştır. Ilgaz, 1929'dan günümüze kadar Çankırı İline bağlı bir ilçedir.
+
+		Kurtuluş Savaşı Yıllarında Ilgaz
+		İnebolu’dan Ankara’ya cephane taşınan yolun üzerinde bulunan Ilgaz 1920’lerde bir nahiye merkeziydi. Cephane naklinde Çerkeş, Kurşunlu, Ilgaz, Kastamonu ve İnebolu birlikte çalışmışlar ve görevlerini birlikte başarmışlardır. Her yörede olduğu gibi Ilgaz’da da tüm fedakarlıkları fazlasıyla yaparak canla başla çalışan kahramanlar çıkmış; daima minnet, hürmet ve rahmetle anılmışlardır.
+
+		İşte bunlardan birkaçı:
+
+		HANCI HALİL AĞA: Kurtuluş Savaşı döneminde Kale Hanı'nın sahibi olan Hancı Halil Ağa, Ilgaz’ın Kale Köyü'ndendir. Çanakkale Savaşı'na iştirak etmiş, İstiklal Savaşı'nın başlaması ile Kuvâ-yi Milliye saflarında yer almış, Türk Ordusu'na maddi manevi yardımlarda bulunarak üstün hizmetler vermiş bir Ilgazlı kahramandır. İstiklal Madalyası sahibi olan Halil Ağa'yı o dönemde İnebolu-Ankara yolunu katedip de tanımayan, onun hanında ağırlamadığı kimse hemen hemen yok gibidir.
+
+		EKSİKLİ SALİH: Ilgaz’ın Eksik Köyü'nden olan Eksikli Salih, Pontus eşkıyasının bölgedeki hareketlerini onların içine girerek yakından izlemiş ve o dönemde Ilgaz’daki cephaneliğin Pontus eşkıyası tarafından havaya uçurulacağı bilgisini haber alıp, bunu yetkililere bildirerek Türk Ordusu'nun maddi kayba uğramasını engellemiştir. İstiklal Savaşı'nın çeşitli cephelerinde çarpışmış, üsteğmenlik rütbesine kadar yükselmiş ve İstiklal Madalyası ile taltif edilmiştir.
+
+		ŞAKİR AĞA: Kıyısın Köyü'nden olan Şakir Ağa Atatürk’ün takdirlerini kazanmış ve Kurtuluş Savaşı sırasında cephane naklinde gösterdiği başarısından dolayı kendisine gümüş işlemeli bir mavzer (tüfek) hediye edilmiştir. 
+
+		ARİF SAĞLAM: Kuyupınar Köyü'nden Arif Sağlam Kurtuluş ve Çanakkale savaşlarına katılmış 1 Teşrinisani 1338 (1 Kasım 1922) tarihli İstiklal Madalyası ile taltif edilmiştir.
+
+		YANIĞIN EMİNE (ÜMMÜHAN NİNE): Türk erkeği cephede savaşırken Türk kadını durur mu hiç? Yüzlerce, binlerce olan kadın kahramanlarımızdan biri olan Ümmihan Nine Kıyısın köyündendir. Adsız kahraman analarımızın bir simgesi olan Ümmihan Nine, Türk Kurtuluş Savaşı'na adını vermiş kahraman Türk kadınını temsil etmektedir. Ankara Ulus'ta Atatürk heykeli etrafında bulunan heykellerden birisi de savaşta cepheye mermi taşıyan kadın heykelidir. Ümmihan Nine işte bu heykelin temsil ettiği Türk kadınının çalışkanlık ve başarısını, ölmezliğini Ilgaz’da temsil edenlerden bir tanesidir. Kurtuluş Savaşı yıllarında cepheye mermi taşıyan Ilgazlı Türk anasıdır.
+		                                                 Alıntı</div>
+        <div id="txt-cografya-baslik">📍 Coğrafya</div><div id="txt-cografya-ust">2587 Metre</div><div id="txt-cografya-icerik">İlçe sınırları içindeki dağlar; kuzey ve güneyde, kuzeydoğu-güneybatı doğrultusunda uzanarak ilçeyi çevrelerken, doğu ve batı sınırında birbirlerine yaklaşırlar. Bu dağlardan Ilgaz Dağları, Devrez Çayı vadisinin kuzeyinde yükselir. Kuzeye bakan ve ilçe sınırları içinde kalan yamaçlar ise daha eğimlidir. Hacıhasan Dağı, ilçenin doğu kısmında, Gökçay vadisinden hemen sonra başlar ve Tosya ilçesiyle olan sınır, bu dağın doruklarından geçer. Kuzeyden Yuva Çayı ve Deringöz Deresi’nin kollarından Kısır Deresi, güneyden Devrez Çayı, doğudan Deringöz Deresi ve batıdan Gökçay tarafından kuşatılan Hacıhasan dağının en yüksek kesimleri 2000m.ye yaklaşır. Dağın güneyde Devrez Çayına bakan yamaçları hafif eğimli ve dalgalıdır. Hacıhasan Dağı, Ilgaz Dağları’yla aynı jeolojik dönemde oluşmuştur. İlçenin güneyindeki sınırlarını belirleyen yükseltiler İn Dağları’nı oluşturmakta olup bu dağlar, Köroğlu Dağları’nın uzantılarıdır. Ilgaz Dağları’na oranla fazla yüksek olmayan bu dağlar (ortalama1500 m.) Devrez vadisinden eğimli bir yamaçla ayrılır.
+		İlçe sınırları içinde plato olarak adlandırılabilecek alanların sayısı çok azdır. Ilgaz Dağları’na doğru yaslanmış oluşumlar, hafif dalgalı düzlük görünümleri ve akarsularla parçalanmış olmaları dolayısıyla plato olarak belirtilebilir, ancak tam bir plato karakteristiği gösterdiği söylenemez. Bunun yanı sıra, Köroğlu Dağları’nın batıdaki yükseltisi az kesimleri ve Hacıhasan Dağı’nın üst kısmındaki düzleşmiş alanlar plato olarak nitelendirilebilir. İlçe arazisinde eğimli alanların çok yer tutması, vadi oluşumunu etkilemiştir. En önemli vadi, ilçenin en büyük, Çankırı ilinin de en önemli akarsularından biri olan Devrez Çayı’nın vadisidir.
+		Batıda kaynağını Orta İlçesi topraklarından alan Devrez Çayı, doğuya doğru uzanan çöküntü oluğunun içine yerleşmiştir. Oluğun oluşumu, kırılma ve çökme olayları sonucu Ilgaz Dağları ile aynı dönemde gerçekleşmiştir. Oluk, bir yamacı daha dik, asimetrik bir yapıdadır ve ilçenin doğu sınırlarına doğru iyice daralarak bir boğaz haline gelir. Bu yapıdan ayrılmayan faylar boyunca, kuzeydeki bölüm, güneye oranla daha fazla doğuya doğru kayıp çökmüş, dolayısıyla bu alan, yurdumuzun en faal ve tahripkâr deprem kuşağı haline gelmiştir.
+		Devrez Vadisi aynı zamanda Kuzey Batı Anadolu fay hattının tabanını oluşturmaktadır.1943 yılında, bölgede ilçe merkezinde orta şiddette hasara yol açan bir deprem meydana gelmiştir. Devrez Vadisine kuzeyden ve güneyden karışan dereler, sel karakterli olup yaz mevsiminde genellikle kururlar. Bu vadiler içinde en önemlisi, Gökçay Vadisi’dir. Bunu Yuvaderesi Vadisi izler. Kuzeyden karışan diğer derelerin oluşturdukları vadiler, Pazarçayı Vadisi, Gircen Çayı Vadisi, Bucura (Yaylaören) Çayı Vadisi’dir. Birbiri ardınca sıralanan bu vadiler, ya sırtlarla ya da üstü hafif dalgalı yüzey parçalarıyla birbirinden ayrılırlar.
+		Alıntı</div>
+        <div id="txt-gezi-baslik">🌲 Gezip Görelim</div><div id="txt-gezi-ust">Gezip Görülecek Yerler</div><div id="txt-gezi-icerik">Ilgaz Milli Parkı.
+		Tanıtım: 02.06.1976 tarihinde ilan edilen 1088,61 hektar büyüklüğündeki Ilgaz Dağı Milli Parkı Batı Karadeniz Bölgesi'nde, Çankırı ve Kastamonu illeri sınırları içinde yer almaktadır. Barındırdığı doğal, kültürel ve rekreasyonel kaynak değerleri ile bölgesel ve ülkesel ölçekte önemli bir konumdadır. Ilgaz Dağı Milli Parkı'nın 750,86 hektarı Kastamonu, 337,75 hektarı da Çankırı il sınırları içerisinde bulunmaktadır.  Ankara'dan Kastamonu ve Çankırı'ya giden yol mili parkın içinden geçer.
+
+		Ulaşım: Kastamonu Ankara yolu üzerinde bulunmakta olup, Kastamonu İl Merkezine 41 Km, Sinop'a 225 Km, Ankara'ya 207 Km, İstanbul'a 477 km uzaklıkta bulunmaktadır.
+
+		Flora: Alan, flora bölgesi olarak; Euro-Siberian (Avrupa-Sibirya) ana flora bölgesinin Oksin alt flora bölgesinde yer almaktadır. Milli Park içerisinde doğal yayılışını gerçekleştiren ve orman ekosistemini oluşturan türler; başta Kazdağı göknarı (Abies nordmanniana subsp. equi-trojani) ile sarıçam (Pinus sylvestris L.)'dır. Bu türlerin genelde saf Kazdağı göknarı ile temel meşcereyi Kazdağı göknarının oluşturduğu Kazdağı göknarı + sarıçam karışık seçme ormanları mevcuttur. Milli Park Alanı ve yakın çevresinde 617 takson belirlenmiştir. Genel olarak "orman", "çalı" ve "alpin bitkiler" olmak üzere üç grupta toplanan bitki formasyonları arasında en geniş yayılışa sahip olanı ormanlardır. Ilgaz Dağları vejetasyon açısından ilginç olduğu kadar floristik açıdan da ilginç ve zengindir. Alanda şu ana kadar yapılan floristik çalışmalar sonucunda milli park içeresinde 51 familyaya ait 234 tür ve türaltı seviyede takson tespit edilmiştir. Bu taksonlardan 37'si ülkemize özgü endemiktir ve endemizm oranı %15,8'dir. Bu endemiklerden 4'ü sadece Ilgaz Dağı'nda yayılış göstermektedir. Bu türlerden Arabis abietina ve Barbarea trichopoda 'nın tehlike kategorisi "Vahim" (CR), Corydalis wendelboi subsp. congesta ve Ornithogalum wiedemannii var. reflexum'un tehlike kategorisi "Tehlikede (EN)"'dir. Bu türler Abies nordmanniana subsp. equi-trojani ormanlarının altı ve açıklıklarında yayılış göstermektedirler. Buna ilave olarak Tehlikede kategorisinde yer alan Verbascum ponticum türü ve 4 tür de "Zarar Görebilir (VU)" kategorisinde yer almaktadır.
+		Fauna: Orman ekosistemi içerisinde omurgalı fauna elemanlarına ait memelilerden Ursus arctos - Boz Ayı, Cervus elaphus – Kızıl Geyik, Capreolus capreolus – Karaca, Canis lupus - Kurt, Lynx lynx -Vaşak Vulpes vulpes –Tilki, Sus scrofa- Yaban domuzu, Pipistrellus pipistrellus - Cüce Yarasa, Lepus europaeus - Yabani Tavşan, Sciurus anomalus - Kafkas Sincabı ile kuşlardan Buteo buteo - Şahin ve Aquila pomarina - Küçük Orman Kartalı yer almaktadır. Ekosistem içerisinde böcek tülerinden ise; Rhagium bifasciatum Fabricius 1775,  Rhagium inquisitor (Linnaeus, 1758), Pissodes piceae  (Illiger, 1807), Thanasimus formicarius(Linnaeus, 1758), Cryphalus piceae (Ratz.), Ips (Pityokteines) curvidens (Germ.), Trypodendron lineatus (Oliver), Ips acuminatus (Gyll.), Pityogenes quadridens (Hartig), Orthotomicus erosus (Woll.),Pieris napi (Linnaeus, 1758), Anthocharis cardamines (Linnaeus, 1758), Argynnis adippe (Denis & Schiffermüller, 1775), Chalcophora mariana L. bulunmaktadır.
+		Kültürel Değerler: Kurtuluş Savaşı sırasında, 1921 yılında, Ilgaz Dağı Derbent karakolunda görev yaparken şehit düşen 5 jandarma erinin anısına 1957 yılında bir abide dikilmiştir. Abide Derbent Otel'in tam karşısında bulunmaktadır. İstiklal Yolu; İnebolu sahilinden başlayıp Kastamonu ve Çankırı üzerinden Ankara'ya uzanan, Kurtuluş Savaşı boyunca İnebolu'ya deniz yoluyla gelen cephanenin kağnılarla cepheye ulaştırılmasında kullanılmıştır. 340 km'lik yolun bir bölümü Milli Park içerisinden geçmektedir. 2006 yılından beri Kastamonu valiliği tarafından Kastamonu'dan İnebolu'ya uzanan "İstiklal Yolu ve Atatürk Yürüyüşü" düzenlenmektedir. Cumhuriyetin ilanından sonra, Büyük Önder Mustafa Kemal Atatürk'ün "23-31 Ağustos 1925" tarihleri arasında Kastamonu'da yaptığı Kıyafet ve Şapka İnkılabı, Cumhuriyet döneminin önemli olayı olarak tarih sayfalarına geçmiştir. Ilgaz Dağı Milli Parkı ziyaretçilerin botanik gezileri, dağ yürüyüşü (trekking), doğa yürüyüşleri, bisiklet turları, dağ tırmanışı, koşu, fotoğraf çekimi, böcek ve hayvanları inceleme, kuş gözlemciliği, piknik gibi rekreasyonel ihtiyaçlarına cevap verebilecek potansiyele sahiptir.  Milli Park uzun süreli dağ yürüyüşleri, doğa/ekoloji gruplarının ve izcilerin en çok tercih edeceği olanaklara ve kaynaklara sahiptir. Zengin orman altı bitki varlığı ve jeolojik yapısı nedeniyle birçok amatör grup yılın farklı mevsimlerinde bu bölgeyi tercih etmektedirler.
+
+		Ilgaz Dağı Milli Parkı içinde 1990 yıllarından bu yana kış turizmi aktivitesi sürdürülmektedir. Milli Park içinde ve sınırında bulunan tesisler kış aylarında büyük çoğunluğu İstanbul ve Ankara'dan kayak yapma amacıyla gelen ziyaretçilere hizmet verecek şekilde yapılanmışlardır.
+
+ 		Alıntı
+		
+		
+		</div>
+        <div id="txt-siir-baslik">✍️ Şiirler</div><div id="txt-siir-ust">Ilgaz Şiirleri</div><div id="txt-siir-icerik">İlgaz
+		Şair: Zeki Ömer Defne
+		Yıldızlar çamlara değer de geçer,
+		Gün burdan başını eğer de geçer.
+		Sular dizlerini döğer de geçer.
+		Bir Ilgaz, er Ilgaz, yar Ilgaz!..
+
+		Başında bir tavus tuğ gibi çamlar,
+		Yollara dizilmiş tığ gibi çamlar,
+		Karşıdan bir zümrüt çığ gibi çamlar.
+		Bir Ilgaz, er Ilgaz, yar Ilgaz!..
+
+		Dalı var; göklere yeşil direktir,
+		Gölü var; dağlara düşmüş yürektir,
+		Yolu var; içinde yitsem gerektir.
+		Bir Ilgaz, er Ilgaz, yar Ilgaz!..
+
+                                                                                                                           </div>
         <div id="txt-yemek-baslik">🍴 Mutfak</div><div id="txt-yemek-ust">Lezzetler</div><div id="txt-yemek-icerik">Yöresel yemekler...</div>
         <div id="txt-deger-baslik">🌟 Değerler</div><div id="txt-deger-ust">Kişiler</div><div id="txt-deger-foto">.</div><div id="txt-deger-isim">.</div><div id="txt-deger-icerik">.</div>
     </div>
@@ -94,7 +176,6 @@
             <div id="content-body" class="metin-alani"></div>
         </div>
     </div>
-
     <script>
         function openNav() { document.getElementById("mySidenav").style.width = "280px"; }
         function closeNav() { document.getElementById("mySidenav").style.width = "0"; }
@@ -137,5 +218,4 @@
 </body>
 
 </html>
-
 
