Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Ilgaz Dijital Rehber</title>
     <style>
         :root { --primary: #1b4d3e; --accent: #f1c40f; --red: #c0392b; }
-        body { font-family: 'Segoe UI', sans-serif; margin: 0; background: #f4f7f6; color: #333; }
+        body { font-family: 'Segoe UI', sans-serif; margin: 0; background: #21F272 color: #333; }
         
         header { background: var(--primary); color: white; padding: 10px 15px; display: flex; align-items: center; position: fixed; width: 100%; top: 0; z-index: 1000; box-sizing: border-box; }
         .header-logo { width: 60px; height: 60px; border-radius: 50%; border: 2px solid var(--accent); margin: 0 15px; object-fit: cover; }
@@ -23,8 +23,8 @@
         }
         .hero h1 { font-size: 1.8rem; text-shadow: 2px 2px 10px rgba(0,0,0,0.7); padding: 0 20px; }
 
-        .container { padding: 20px; margin-top: -40px; }
-        .card { background: blue; padding: 25px; border-radius: 20px; box-shadow: 0 4px 20px rgba(0,0,0,0.15); min-height: 400px; line-height: 1.6; }
+        .container { padding: 40px; margin-top: -40px; }
+        .card { background: blue; padding: 10px; border-radius: 20px; box-shadow: 0 4px 20px rgba(0,0,0,0.15); min-height: 400px; line-height: 1.6; }
         .divider { height: 5px; width: 70px; background: var(--accent); margin: 15px 0; border-radius: 5px; }
         
         .metin-alani { white-space: pre-line; font-size: 1.1rem; }
@@ -133,8 +133,8 @@
 
         <div id="txt-deger-baslik">🌟 Ilgaz Değerleri</div>
         <div id="txt-deger-ust">Kıymetli Şahsiyetler</div>
-        <div id="txt-deger-foto">yasar.jpg</div>
-        <div id="txt-deger-isim">Yaşar Kuloğlu</div>
+        <div id="txt-deger-foto">H.Yurdagul.jpg</div>
+        <div id="txt-deger-isim">Hasan YURDAGÜL</div>
         <div id="txt-deger-icerik">Ilgaz'ın yetiştirdiği değerli isimlerden biridir. 
     	Eğitim hayatı ve projeleri ile bölgeye katkı sağlamaktadır.
     	Buraya istediğin kadar uzun yazı ekleyebilirsin, kutu otomatik genişler.</div>
