--- a/index.html
+++ b/index.html
@@ -23,9 +23,23 @@
         }
         .hero h1 { font-size: 1.8rem; text-shadow: 2px 2px 10px rgba(0,0,0,0.7); padding: 0 20px; }
 
-        .container { padding: 40px; margin-top: -40px; }
-        .card { background: blue; padding: 10px; border-radius: 20px; box-shadow: 0 4px 20px rgba(0,0,0,0.15); min-height: 400px; line-height: 1.6; }
-        .divider { height: 5px; width: 70px; background: var(--accent); margin: 15px 0; border-radius: 5px; }
+       .container { 
+    padding: 0; 
+    margin: 0;            /* Tüm dış boşlukları sıfırlar */
+    margin-top: -40px;    /* Kartın görselin üzerine binmesini sağlar */
+    max-width: 100% !important; /* Başka bir kodun genişliği sınırlamasını engeller */
+    width: 100vw;         /* Ekranın tam genişliğini (viewport width) kullanır */
+}
+
+.card { 
+    background: #208DEA; 
+    padding: 20px; 
+    border-radius: 0;     /* Tam yayılma için köşeleri sıfırlamak en iyisidir */
+    width: 100%; 
+    box-sizing: border-box; /* Padding'in (iç boşluk) kartı dışarı taşırmasını önler */
+    margin: 0;
+}
+        .divider { height: 5px; width: 300px; background: var(--accent); margin: 15px 0; border-radius: 5px; }
         
         .metin-alani { white-space: pre-line; font-size: 1.1rem; }
         .sehit-kart { background: #fff5f5; padding: 15px; border-radius: 12px; margin-bottom: 10px; border-left: 5px solid var(--red); }
@@ -137,7 +151,7 @@
         <div id="txt-deger-isim">Hasan YURDAGÜL</div>
         <div id="txt-deger-icerik">Ilgaz'ın yetiştirdiği değerli isimlerden biridir. 
     	Eğitim hayatı ve projeleri ile bölgeye katkı sağlamaktadır.
-    	Buraya istediğin kadar uzun yazı ekleyebilirsin, kutu otomatik genişler.</div>
+    	</div>
 
         <div id="txt-iletisim-baslik">📞 İletişim</div>
         <div id="txt-iletisim-ust">Bize Ulaşın</div>
