Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
 
     <div id="VERI_DEPOSU">
-        <div id="txt-giris-baslik">🏠 Ilgaz Rehberi</div><div id="txt-giris-ust">Hoş Geldiniz</div><div id="txt-giris-icerik">1-Ilgaz Tarihi<br>2-Coğrafi Konum<br>3-Gezip Görelim<br>4-Şiirler<br>5-Mutfak<br> 6-Ilgaz Değerleri</div>
+        <div id="txt-giris-baslik">🏠 Ilgaz Rehberi</div><div id="txt-giris-ust">Hoş Geldiniz</div><div id="txt-giris-icerik">1-Ilgaz Tarihi<br>2-Coğrafi Konum<br>3-Gezip Görelim<br>4-Şiirler<br>5-Şehitlerimiz<br>6-Mutfak<br>7-Ilgaz Değerleri</div>
         <div id="txt-tarih-baslik">📜 Ilgaz Tarihi</div><div id="txt-tarih-ust">Şanlı Geçmiş</div><div id="txt-tarih-icerik">Ilgaz'ın Tarihçesi
 		Ilgaz, geçmişte doğu ve batı medeniyetlerinin kaynaştığı ve farklı kültürlerin bir araya geldiği önemli bir coğrafyadır. İlçemizin kuruluşuna ilişkin MÖ 2000 yılına ait olduğu tahmin edilen Arkhaik, Helenistik ve Roma çağına dayanan yüzeysel buluntular elde edilmiş olmasına rağmen kesin yerleşim tarihi bu buluntulara bakılarak belirlenememiştir.
 
@@ -140,19 +140,97 @@
         
         <div id="txt-sehit-baslik">🇹🇷 Aziz Şehitlerimiz</div>
         <div id="txt-sehit-ust">Vatan Size Minnettar</div>
-        <div id="txt-sehit-icerik">
-            <div class="sehit-kart"><span class="sehit-isim">Şehit İsmi 1</span><span>D.Tarihi - Şahadet Tarihi</span></div>
-            <div class="sehit-kart"><span class="sehit-isim">Şehit İsmi 2</span><span>D.Tarihi - Şahadet Tarihi</span></div>
-        </div>
-
-        <div id="txt-deger-baslik">🌟 Ilgaz Değerleri</div>
+       <div id="txt-sehit-icerik">
+    <div style="height: 500px; overflow-y: auto; border: 1px solid #ddd; border-radius: 8px; position: relative;">
+        <table style="width:100%; border-collapse: collapse; font-size: 0.85rem; background: white;">
+            <thead style="position: sticky; top: 0; background: #c0392b; color: white; z-index: 10;">
+                <tr>
+                    <th style="padding: 10px; border-bottom: 2px solid #900;">Adı Soyadı / Baba</th>
+                    <th style="padding: 10px; border-bottom: 2px solid #900;">Köyü / Cephe</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td style="padding: 10px; border-bottom: 1px solid #eee;"><b>ABDULLAH</b><br><small>ALİ (1303)</small></td>
+                    <td style="padding: 10px; border-bottom: 1px solid #eee;">OKÇULAR<br><small>1.Dünya / Çanakkale</small></td>
+                </tr>
+                <tr style="background: #f9f9f9;">
+                    <td style="padding: 10px; border-bottom: 1px solid #eee;"><b>ABDULLAH</b><br><small>SADIK (1302)</small></td>
+                    <td style="padding: 10px; border-bottom: 1px solid #eee;">SEKİ<br><small>1.Dünya / Çanakkale</small></td>
+                </tr>
+				<tr>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;"><b>İSİM</b><br><small>BABA ADI (DOĞUM YILI)</small></td>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;">KÖYÜ<br><small>CEPHESİ</small></td>
+</tr>
+				<tr>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;"><b>İSİM</b><br><small>BABA ADI (DOĞUM YILI)</small></td>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;">KÖYÜ<br><small>CEPHESİ</small></td>
+</tr>
+				<tr>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;"><b>İSİM</b><br><small>BABA ADI (DOĞUM YILI)</small></td>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;">KÖYÜ<br><small>CEPHESİ</small></td>
+</tr>
+				<tr>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;"><b>İSİM</b><br><small>BABA ADI (DOĞUM YILI)</small></td>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;">KÖYÜ<br><small>CEPHESİ</small></td>
+</tr>
+     <tr>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;"><b>İSİM</b><br><small>BABA ADI (DOĞUM YILI)</small></td>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;">KÖYÜ<br><small>CEPHESİ</small></td>
+</tr>
+				<tr>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;"><b>İSİM</b><br><small>BABA ADI (DOĞUM YILI)</small></td>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;">KÖYÜ<br><small>CEPHESİ</small></td>
+</tr>
+				<tr>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;"><b>İSİM</b><br><small>BABA ADI (DOĞUM YILI)</small></td>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;">KÖYÜ<br><small>CEPHESİ</small></td>
+</tr>
+				<tr>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;"><b>İSİM</b><br><small>BABA ADI (DOĞUM YILI)</small></td>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;">KÖYÜ<br><small>CEPHESİ</small></td>
+</tr>
+				<tr>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;"><b>İSİM</b><br><small>BABA ADI (DOĞUM YILI)</small></td>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;">KÖYÜ<br><small>CEPHESİ</small></td>
+</tr>
+				<tr>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;"><b>İSİM</b><br><small>BABA ADI (DOĞUM YILI)</small></td>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;">KÖYÜ<br><small>CEPHESİ</small></td>
+</tr>
+				<tr>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;"><b>İSİM</b><br><small>BABA ADI (DOĞUM YILI)</small></td>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;">KÖYÜ<br><small>CEPHESİ</small></td>
+</tr>
+				<tr>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;"><b>İSİM</b><br><small>BABA ADI (DOĞUM YILI)</small></td>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;">KÖYÜ<br><small>CEPHESİ</small></td>
+</tr>
+				<tr>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;"><b>İSİM</b><br><small>BABA ADI (DOĞUM YILI)</small></td>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;">KÖYÜ<br><small>CEPHESİ</small></td>
+</tr>
+				<tr>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;"><b>İSİM</b><br><small>BABA ADI (DOĞUM YILI)</small></td>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;">KÖYÜ<br><small>CEPHESİ</small></td>
+</tr>
+				<tr>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;"><b>İSİM</b><br><small>BABA ADI (DOĞUM YILI)</small></td>
+    <td style="padding: 10px; border-bottom: 1px solid #eee;">KÖYÜ<br><small>CEPHESİ</small></td>
+</tr>
+			</tbody>
+        </table>
+    </div>
+    <p style="text-align: center; font-size: 0.8rem; color: #666; margin-top: 10px;">(Listeyi yukarı kaydırarak tüm şehitlerimizi görebilirsiniz)</p>
+</div>
+ 		<div id="txt-deger-baslik">🌟 Ilgaz Değerleri</div>
         <div id="txt-deger-ust">Kıymetli Şahsiyetler</div>
         <div id="txt-deger-foto">H.Yurdagul.jpg</div>
         <div id="txt-deger-isim">Hasan YURDAGÜL</div>
         <div id="txt-deger-icerik">Ilgaz'ın yetiştirdiği değerli isimlerden biridir. 
-    	Eğitim hayatı ve projeleri ile bölgeye katkı sağlamaktadır.
+    	Eğitim hayatı ve projeleri ile bölgeye katkı sağlamaktadır.    
     	</div>
-
+		
         <div id="txt-iletisim-baslik">📞 İletişim</div>
         <div id="txt-iletisim-ust">Bize Ulaşın</div>
         <div id="txt-iletisim-tel">+90 376 000 00 00</div>
@@ -227,4 +305,5 @@
     </script>
 </body>
 </html>
+
 
